force-app/main/default/objects/RoleSettings__c/RoleSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Identify User Role</description>
    <label>Role Settings</label>
</CustomObject>