force-app/main/default/objects/RoleSettings__c/fields/IsAdmin__c.field-meta.xml
<CustomField>
    <fullName>IsAdmin__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if User is System Administrator</description>
    <inlineHelpText>Flag to indicate if User is System Administrator</inlineHelpText>
    <label>IsAdmin</label>
    <type>Checkbox</type>
</CustomField>