force-app/main/default/objects/RoleSettings__c/fields/IsInstaller__c.field-meta.xml
<CustomField>
    <fullName>IsInstaller__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if User is Installer</description>
    <inlineHelpText>Flag to indicate if User is Installer</inlineHelpText>
    <label>IsInstaller</label>
    <type>Checkbox</type>
</CustomField>