force-app/main/default/objects/RoleSettings__c/fields/IsManager__c.field-meta.xml
<CustomField>
    <fullName>IsManager__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if User is a Sales Manager or Installation Manager</description>
    <inlineHelpText>Flag to indicate if User is a Sales Manager or Installation Manager</inlineHelpText>
    <label>IsManager</label>
    <type>Checkbox</type>
</CustomField>