force-app/main/default/objects/RoleSettings__c/fields/IsSales__c.field-meta.xml
<CustomField>
    <fullName>IsSales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if User is a Sales User</description>
    <inlineHelpText>Flag to indicate if User is Sales User</inlineHelpText>
    <label>IsSales</label>
    <type>Checkbox</type>
</CustomField>