force-app/main/default/objects/RoleSettings__c/fields/IsSupervisor__c.field-meta.xml
<CustomField>
    <fullName>IsSupervisor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if User is Installation Manager</description>
    <inlineHelpText>Flag to indicate if User is Installation Manager</inlineHelpText>
    <label>IsSupervisor</label>
    <type>Checkbox</type>
</CustomField>