force-app/main/default/objects/RoleSettings__c/fields/IsSupport__c.field-meta.xml
<CustomField>
    <fullName>IsSupport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag to indicate if User is Technical Support</description>
    <inlineHelpText>Flag to indicate if User is Technical Support</inlineHelpText>
    <label>IsSupport</label>
    <type>Checkbox</type>
</CustomField>